objects/RH_Order__c.object
<CustomObject>
    <fields>
        <fullName>Ship_To_Address__c</fullName>
        <description>Created for use with the MDM project by Traction on Demand. No known use for this field.</description>
        <formula>ShipTo1_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_HDL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show HDL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sold_To_Address_1__c</fullName>
        <description>CW Sold to Address Line 1</description>
        <label>Sold To Address 1</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Address_3__c</fullName>
        <label>Sold To Address 3</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Apartment__c</fullName>
        <label>Sold To Apartment</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Contact_Address__c</fullName>
        <description>Field created to display Sold To address fields and to be used for field history tracking. Field will be updated with code.</description>
        <label>Sold To Contact Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Zip_Plus_4__c</fullName>
        <label>Zip Plus 4</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_to_Address_2__c</fullName>
        <description>CW Sold to Address Line 2</description>
        <label>Sold To Address 2</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_to_Address__c</fullName>
        <formula>IF(
AND
(
ISBLANK(Sold_To_Address_1__c),
ISBLANK(Sold_to_Address_2__c),
ISBLANK(Sold_to_Company__c),
ISBLANK(Sold_to_City__c),
ISBLANK(Sold_to_State__c),
ISBLANK(Sold_to_Zip__c),
ISBLANK(Sold_to_Country__c)
), 
null, 
Sold_To_Address_1__c  + BR() +  Sold_to_Address_2__c + BR() + Sold_to_City__c + &quot;, &quot; +  Sold_to_State__c + &quot;, &quot; + Sold_to_Zip__c + BR() + Sold_to_Country__c
)</formula>
        <label>Sold To Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_to_City__c</fullName>
        <description>CW Sold to City</description>
        <label>Sold To City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_to_Company__c</fullName>
        <label>Sold To Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_to_Country_Code__c</fullName>
        <description>CW Sold to Country Code</description>
        <label>Sold To Country Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_to_Country__c</fullName>
        <description>CW Sold to Country</description>
        <label>Sold To Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_to_Customer_Number__c</fullName>
        <description>CW Sold to Cust Number</description>
        <label>Sold To Customer Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_to_Day_Phone__c</fullName>
        <description>CW Sold to Daytime Phone</description>
        <label>Sold To Day Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sold_to_Email__c</fullName>
        <description>CW Sold to Email</description>
        <label>Sold To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sold_to_First_Name__c</fullName>
        <description>CW Sold to Fname</description>
        <label>Sold To First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_to_Last_Name__c</fullName>
        <description>CW Sold to Lname</description>
        <label>Sold To Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_to_Name__c</fullName>
        <formula>IF(
AND(ISBLANK(Sold_to_Last_Name__c),  ISBLANK(Sold_to_First_Name__c)), null, Sold_to_Last_Name__c + &quot;, &quot; + Sold_to_First_Name__c)</formula>
        <label>Sold To Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_to_Night_Phone__c</fullName>
        <description>CW Sold to Night Phone</description>
        <label>Sold To Night Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sold_to_State__c</fullName>
        <description>CW Sold to State</description>
        <label>Sold To State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_to_Zip__c</fullName>
        <description>CW Sold to Zip</description>
        <label>Sold To Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Code__c</fullName>
        <description>Mail Segment and Client Type</description>
        <label>Source Code</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System_View_Sold_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for use with the MDM project by Traction on Demand. This field gets updated automatically after the SSV process has run to determine whether this Order should be linked to an existing SSV or if a new SSV needs to be created.</description>
        <label>Source System View Sold To</label>
        <referenceTo>Source_System_View__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Update_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Status Update User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Open- Order lines are open to be fulfilled
Closed- All items have either shipped or cancelled
Cancelled - No items have shipped - all cancelled
Held- Order placed on hold. Will not ship.
Suspended/Error - Issues preventing CW processing and accepting</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Held</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Hold_Code__c</fullName>
        <description>AT</description>
        <label>System Hold Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Hold_Description__c</fullName>
        <description>Decline Credit Card</description>
        <label>System Hold</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Exempt__c</fullName>
        <description>Customer Tax Exempt Code</description>
        <inlineHelpText>Customer Tax Exempt Code</inlineHelpText>
        <label>Tax Exempt</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <summarizedField>Ship_To__c.Tax__c</summarizedField>
        <summaryForeignKey>Ship_To__c.Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <description>Created for use with the MDM project by Traction on Demand. Functionality for this field was not in scope for Phase 1.</description>
        <formula>Contact_Sold_To__r.Tier_Display__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Email_Address__c</fullName>
        <inlineHelpText>The email will be sent to this email address.</inlineHelpText>
        <label>To Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Total_Attribution__c</fullName>
        <inlineHelpText>Sum Total of Attribution % from associated Sales Attribution records.</inlineHelpText>
        <label>Total Attribution %</label>
        <summarizedField>Sales_Attribution__c.Attribution_Percent__c</summarizedField>
        <summaryForeignKey>Sales_Attribution__c.Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Contacts__c</fullName>
        <formula>Callout_Contacts__c + Email_Contacts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total number of times the customer has been contacted via a case.</inlineHelpText>
        <label>Total Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Order_Amount_Timeline__c</fullName>
        <formula>IF(Order_Total__c = 0,


(&quot;$&quot; &amp; TEXT(  Total_Order_Amount__c   )&amp; IF(CONTAINS(RIGHT(TEXT( Total_Order_Amount__c ), 2), &quot;.&quot;), &quot;0&quot;, &quot;&quot;)),

(&quot;$&quot; &amp; TEXT(  Order_Total__c   )&amp; IF(CONTAINS(RIGHT(TEXT( Order_Total__c ), 2), &quot;.&quot;), &quot;0&quot;, &quot;&quot;))

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Order Amount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Order_Amount__c</fullName>
        <description>Including shipping, handling, and tax</description>
        <inlineHelpText>Order total sums all ship tos.</inlineHelpText>
        <label>Total Order Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trade_ID__c</fullName>
        <label>Trade ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Hold_Code__c</fullName>
        <description>CA</description>
        <label>User Hold Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Hold_Description__c</fullName>
        <description>Credit Card Hold</description>
        <label>User Hold</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Order_Number__c</fullName>
        <description>ATG Order Number</description>
        <label>Web Order Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>With_Opportunity__c</fullName>
        <formula>NOT( OR(ISNULL(Opportunity__c), ISBLANK(Opportunity__c)) )</formula>
        <label>With Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <label>Order</label>
    <listViews>
        <fullName>Brandon_Thomas_s_Orders</fullName>
        <columns>Order_Date__c</columns>
        <columns>NAME</columns>
        <columns>Merchandise_Subtotal__c</columns>
        <columns>Sold_to_Name__c</columns>
        <columns>Sold_to_Day_Phone__c</columns>
        <columns>Grey_Card__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Entered_by_Associate__c</field>
            <operation>equals</operation>
            <value>Bthomas</value>
        </filters>
        <label>Brandon Thomas&apos;s Orders</label>
        <sharedTo>
            <group>Gallery_008_Portland</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CON_Business_Administrator_RH_Order</fullName>
        <columns>NAME</columns>
        <columns>Account_Sold_To__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Total_Order_Amount__c</columns>
        <columns>Total_Order_Amount_Timeline__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Order_Type_Code__c</field>
            <operation>equals</operation>
            <value>Z</value>
        </filters>
        <filters>
            <field>Opportunity__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Order_Date__c</field>
            <operation>greaterThan</operation>
            <value>3/1/2017</value>
        </filters>
        <label>Contract Orders</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSC_Business_Administrators_RH_Order</fullName>
        <filterScope>Queue</filterScope>
        <label>CSC Business Administrators</label>
        <queue>CSC_Business_Administrators</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Florida_Market_Web_Orders</fullName>
        <columns>NAME</columns>
        <columns>Gallery_Number__c</columns>
        <columns>Order_Date__c</columns>
        <columns>Sold_to_First_Name__c</columns>
        <columns>Sold_to_Last_Name__c</columns>
        <columns>Merchandise_Subtotal__c</columns>
        <columns>Entered_by_Associate__c</columns>
        <columns>Email_Contacts__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Web_Order_Number__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Sold_to_State__c</field>
            <operation>equals</operation>
            <value>FL</value>
        </filters>
        <filters>
            <field>Order_Type_Code__c</field>
            <operation>notEqual</operation>
            <value>Z</value>
        </filters>
        <filters>
            <field>Order_Type_Description__c</field>
            <operation>equals</operation>
            <value>WEB</value>
        </filters>
        <filters>
            <field>Sold_to_Zip__c</field>
            <operation>startsWith</operation>
            <value>33</value>
        </filters>
        <label>South Florida Market Web Orders</label>
        <sharedTo>
            <group>Gallery_044_Aventura</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Gallery_008_Portland1</fullName>
        <columns>Gallery_Number__c</columns>
        <columns>Order_Date__c</columns>
        <columns>Sold_to_Last_Name__c</columns>
        <columns>Sold_to_First_Name__c</columns>
        <columns>NAME</columns>
        <columns>Merchandise_Subtotal__c</columns>
        <columns>Total_Order_Amount__c</columns>
        <columns>Entered_by_Associate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Gallery_Number__c</field>
            <operation>equals</operation>
            <value>8</value>
        </filters>
        <label>Gallery 008 - Portland</label>
        <sharedTo>
            <group>Gallery_008_Portland</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Gallery_024_Seattle1</fullName>
        <columns>Gallery_Number__c</columns>
        <columns>Order_Date__c</columns>
        <columns>Sold_to_Last_Name__c</columns>
        <columns>Sold_to_First_Name__c</columns>
        <columns>NAME</columns>
        <columns>Merchandise_Subtotal__c</columns>
        <columns>Total_Order_Amount__c</columns>
        <columns>Entered_by_Associate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Gallery_Number__c</field>
            <operation>equals</operation>
            <value>24</value>
        </filters>
        <filters>
            <field>Entered_by_Associate__c</field>
            <operation>equals</operation>
            <value>jkyoung</value>
        </filters>
        <label>Gallery 024 - Seattle</label>
        <sharedTo>
            <group>Gallery_024_Seattle</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Gallery_027_Tyson_s_Corner</fullName>
        <columns>Gallery_Number__c</columns>
        <columns>Order_Date__c</columns>
        <columns>Sold_to_Last_Name__c</columns>
        <columns>Sold_to_First_Name__c</columns>
        <columns>NAME</columns>
        <columns>Merchandise_Subtotal__c</columns>
        <columns>Total_Order_Amount__c</columns>
        <columns>Entered_by_Associate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Gallery_Number__c</field>
            <operation>equals</operation>
            <value>27</value>
        </filters>
        <label>Gallery 027 - Tyson&apos;s Corner</label>
        <sharedTo>
            <group>Gallery_027_Tysons_Corner</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Gallery_036_Pittsburgh</fullName>
        <columns>Gallery_Number__c</columns>
        <columns>Order_Date__c</columns>
        <columns>Sold_to_Last_Name__c</columns>
        <columns>Sold_to_First_Name__c</columns>
        <columns>NAME</columns>
        <columns>Merchandise_Subtotal__c</columns>
        <columns>Total_Order_Amount__c</columns>
        <columns>Entered_by_Associate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Gallery_Number__c</field>
            <operation>equals</operation>
            <value>36</value>
        </filters>
        <label>Gallery 036 - Pittsburgh</label>
        <sharedTo>
            <group>Gallery_036_Pittsburgh</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Gallery_045_Birmingham</fullName>
        <columns>Gallery_Number__c</columns>
        <columns>Order_Date__c</columns>
        <columns>Sold_to_Last_Name__c</columns>
        <columns>Sold_to_First_Name__c</columns>
        <columns>NAME</columns>
        <columns>Merchandise_Subtotal__c</columns>
        <columns>Total_Order_Amount__c</columns>
        <columns>Entered_by_Associate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Gallery_Number__c</field>
            <operation>equals</operation>
            <value>45</value>
        </filters>
        <label>Gallery 045 - Birmingham</label>
        <sharedTo>
            <group>Gallery_045_Birmingham</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Gallery_048_Short_Hills</fullName>
        <columns>Gallery_Number__c</columns>
        <columns>Order_Date__c</columns>
        <columns>Sold_to_Last_Name__c</columns>
        <columns>Sold_to_First_Name__c</columns>
        <columns>NAME</columns>
        <columns>Merchandise_Subtotal__c</columns>
        <columns>Total_Order_Amount__c</columns>
        <columns>Entered_by_Associate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Gallery_Number__c</field>
            <operation>equals</operation>
            <value>48</value>
        </filters>
        <label>Gallery 048 - Short Hills</label>
        <sharedTo>
            <group>Gallery_048_Short_Hills</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Gallery_053_Georgetown</fullName>
        <columns>Gallery_Number__c</columns>
        <columns>Order_Date__c</columns>
        <columns>Sold_to_Last_Name__c</columns>
        <columns>Sold_to_First_Name__c</columns>
        <columns>NAME</columns>
        <columns>Merchandise_Subtotal__c</columns>
        <columns>Total_Order_Amount__c</columns>
        <columns>Entered_by_Associate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Gallery_Number__c</field>
            <operation>equals</operation>
            <value>44</value>
        </filters>
        <label>Gallery 044</label>
        <sharedTo>
            <group>Gallery_044_Aventura</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Gallery_054_Nashville</fullName>
        <columns>Gallery_Number__c</columns>
        <columns>Order_Date__c</columns>
        <columns>Sold_to_Last_Name__c</columns>
        <columns>Sold_to_First_Name__c</columns>
        <columns>NAME</columns>
        <columns>Merchandise_Subtotal__c</columns>
        <columns>Total_Order_Amount__c</columns>
        <columns>Entered_by_Associate__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Gallery_Number__c</field>
            <operation>equals</operation>
            <value>54</value>
        </filters>
        <label>Gallery 054 - Nashville</label>
        <sharedTo>
            <group>Gallery_054_Nashville</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Gallery_061_Walnut_Creek</fullName>
        <columns>Sold_to_Last_Name__c</columns>
        <columns>Sold_to_First_Name__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sold_to_First_Name__c</field>
            <operation>contains</operation>
            <value>Patricia</value>
        </filters>
        <filters>
            <field>Sold_to_Last_Name__c</field>
            <operation>greaterThan</operation>
            <value>Battersby</value>
        </filters>
        <label>Patricia Battersby</label>
        <sharedTo>
            <group>Internal_Audit</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Gallery_062_Flatiron</fullName>
        <columns>Gallery_Number__c</columns>
        <columns>Order_Date__c</columns>
        <columns>Sold_to_Last_Name__c</columns>
        <columns>Sold_to_First_Name__c</columns>
        <columns>NAME</columns>
        <columns>Merchandise_Subtotal__c</columns>
        <columns>Total_Order_Amount__c</columns>
        <columns>Entered_by_Associate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Gallery_Number__c</field>
            <operation>equals</operation>
            <value>62</value>
        </filters>
        <label>Gallery 062 - Flatiron</label>
        <sharedTo>
            <group>Gallery_062_Flatiron</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Gallery_071_Oak_Brook</fullName>
        <columns>Gallery_Number__c</columns>
        <columns>Order_Date__c</columns>
        <columns>Sold_to_Last_Name__c</columns>
        <columns>Sold_to_First_Name__c</columns>
        <columns>NAME</columns>
        <columns>Merchandise_Subtotal__c</columns>
        <columns>Total_Order_Amount__c</columns>
        <columns>Entered_by_Associate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Gallery_Number__c</field>
            <operation>equals</operation>
            <value>71</value>
        </filters>
        <label>Gallery 071 - Oak Brook</label>
        <sharedTo>
            <group>Gallery_071_Oak_brook</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Order Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <recordTypes>
        <fullName>Master</fullName>
        <active>true</active>
        <label>Master</label>
    </recordTypes>
    <recordTypes>
        <fullName>Order_Shell</fullName>
        <active>true</active>
        <description>In beginning phases, for same day orders, when CW information has not yet been pushed into SF</description>
        <label>Order Shell</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Order_Notification_Internal_Email_Only</fullName>
        <active>true</active>
        <description>The order field Order Notification Visibility must be an internal RH email address.</description>
        <errorConditionFormula>AND(
  NOT(ISBLANK(Order_Notification_Visibility__c)),
  NOT(RIGHT(Order_Notification_Visibility__c, 7) = &quot;@rh.com&quot;),
  NOT(RIGHT(Order_Notification_Visibility__c, 24) = &quot;@restorationhardware.com&quot;)
)</errorConditionFormula>
        <errorDisplayField>Order_Notification_Visibility__c</errorDisplayField>
        <errorMessage>Email address must be in the rh.com or restorationhardware.com domain.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Update_Order_Number_on_Shell_ONLY</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordType.Name = &quot;Master&quot;, ISCHANGED(Name))</errorConditionFormula>
        <errorMessage>You cannot change the order number.</errorMessage>
    </validationRules>
</CustomObject>